app/src/main/cpp/audio_engine.h

    // Controles básicos
    void setGain(float gain);
    void setDistortion(float amount);
    void setDelay(float time, float feedback);
    void setReverb(float roomSize, float damping);
    
    // Processamento de áudio
    float processSample(float input);
    void processBuffer(float* input, float* output, int numSamples, int inputLength, int outputLength);
    
    // Inicialização e limpeza
    void initAudioEngine();
    void cleanupAudioEngine();
    // Metrônomo
    void startMetronome(int bpm);
    void stopMetronome();
    bool isMetronomeActive();
    void setSampleRate(int rate);
    // Looper
    void startLooperRecording();
    void stopLooperRecording();
    void startLooperPlayback();
    void stopLooperPlayback();
    void clearLooper();
    bool isLooperRecording();
    bool isLooperPlaying();
    
    // Novas funções para looper avançado
    int getLooperLength();
    int getLooperPosition();
    void setLooperPosition(int position);
    void setLooperTrackVolume(int trackIndex, float volume);
    void setLooperTrackMuted(int trackIndex, bool muted);
    void setLooperTrackSoloed(int trackIndex, bool soloed);
    void removeLooperTrack(int trackIndex);
    void setLooperBPM(int bpm);
    void setLooperSyncEnabled(bool enabled);
    // Afinador
    void startTuner();
    void stopTuner();
    bool isTunerActive();
    float getDetectedFrequency();
    void processTunerBuffer(const float* input, int numSamples);
    // Ativação/desativação de efeitos
    void setGainEnabled(bool enabled);
    void setDistortionEnabled(bool enabled);
    bool isMetronomeActive();