flutter_app/lib/engine/bindings.dart

// GENERATED FILE. DO NOT EDIT.
// Regenerar via: fvm flutter pub run ffigen --config ffigen.yaml
// ignore_for_file: type=lint, unused_field, unused_element

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

/// FFI bindings para o engine nativo do ToneForge (DSP + Oboe backend).
/// Gerado a partir dos headers em ../engine/include/toneforge/.
///
class ToneforgeEngineBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ToneforgeEngineBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ToneforgeEngineBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Controles básicos
  void setGain(double gain) {
    return _setGain(gain);
  }

  late final _setGainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setGain');
  late final _setGain = _setGainPtr.asFunction<void Function(double)>();

  void setDistortion(double amount) {
    return _setDistortion(amount);
  }

  late final _setDistortionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setDistortion',
      );
  late final _setDistortion = _setDistortionPtr
      .asFunction<void Function(double)>();

  void setDelay(double time, double feedback) {
    return _setDelay(time, feedback);
  }

  late final _setDelayPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float, ffi.Float)>>(
        'setDelay',
      );
  late final _setDelay = _setDelayPtr
      .asFunction<void Function(double, double)>();

  void setReverb(double roomSize, double damping) {
    return _setReverb(roomSize, damping);
  }

  late final _setReverbPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float, ffi.Float)>>(
        'setReverb',
      );
  late final _setReverb = _setReverbPtr
      .asFunction<void Function(double, double)>();

  /// Processamento de áudio
  double processSample(double input) {
    return _processSample(input);
  }

  late final _processSamplePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>(
        'processSample',
      );
  late final _processSample = _processSamplePtr
      .asFunction<double Function(double)>();

  void processBuffer(
    ffi.Pointer<ffi.Float> input,
    ffi.Pointer<ffi.Float> output,
    int numSamples,
    int inputLength,
    int outputLength,
  ) {
    return _processBuffer(input, output, numSamples, inputLength, outputLength);
  }

  late final _processBufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Float>,
            ffi.Pointer<ffi.Float>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('processBuffer');
  late final _processBuffer = _processBufferPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Float>,
          ffi.Pointer<ffi.Float>,
          int,
          int,
          int,
        )
      >();

  /// Inicialização e limpeza
  void initAudioEngine() {
    return _initAudioEngine();
  }

  late final _initAudioEnginePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('initAudioEngine');
  late final _initAudioEngine = _initAudioEnginePtr
      .asFunction<void Function()>();

  void cleanupAudioEngine() {
    return _cleanupAudioEngine();
  }

  late final _cleanupAudioEnginePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('cleanupAudioEngine');
  late final _cleanupAudioEngine = _cleanupAudioEnginePtr
      .asFunction<void Function()>();

  /// Metrônomo
  void startMetronome(int bpm) {
    return _startMetronome(bpm);
  }

  late final _startMetronomePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('startMetronome');
  late final _startMetronome = _startMetronomePtr
      .asFunction<void Function(int)>();

  void stopMetronome() {
    return _stopMetronome();
  }

  late final _stopMetronomePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('stopMetronome');
  late final _stopMetronome = _stopMetronomePtr.asFunction<void Function()>();

  bool isMetronomeActive() {
    return _isMetronomeActive();
  }

  late final _isMetronomeActivePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('isMetronomeActive');
  late final _isMetronomeActive = _isMetronomeActivePtr
      .asFunction<bool Function()>();

  void setSampleRate(int rate) {
    return _setSampleRate(rate);
  }

  late final _setSampleRatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('setSampleRate');
  late final _setSampleRate = _setSampleRatePtr
      .asFunction<void Function(int)>();

  /// Looper
  void startLooperRecording() {
    return _startLooperRecording();
  }

  late final _startLooperRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('startLooperRecording');
  late final _startLooperRecording = _startLooperRecordingPtr
      .asFunction<void Function()>();

  void stopLooperRecording() {
    return _stopLooperRecording();
  }

  late final _stopLooperRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('stopLooperRecording');
  late final _stopLooperRecording = _stopLooperRecordingPtr
      .asFunction<void Function()>();

  void startLooperPlayback() {
    return _startLooperPlayback();
  }

  late final _startLooperPlaybackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('startLooperPlayback');
  late final _startLooperPlayback = _startLooperPlaybackPtr
      .asFunction<void Function()>();

  void stopLooperPlayback() {
    return _stopLooperPlayback();
  }

  late final _stopLooperPlaybackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('stopLooperPlayback');
  late final _stopLooperPlayback = _stopLooperPlaybackPtr
      .asFunction<void Function()>();

  void clearLooper() {
    return _clearLooper();
  }

  late final _clearLooperPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'clearLooper',
  );
  late final _clearLooper = _clearLooperPtr.asFunction<void Function()>();

  bool isLooperRecording() {
    return _isLooperRecording();
  }

  late final _isLooperRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('isLooperRecording');
  late final _isLooperRecording = _isLooperRecordingPtr
      .asFunction<bool Function()>();

  bool isLooperPlaying() {
    return _isLooperPlaying();
  }

  late final _isLooperPlayingPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('isLooperPlaying');
  late final _isLooperPlaying = _isLooperPlayingPtr
      .asFunction<bool Function()>();

  /// Novas funções para looper avançado
  int getLooperLength() {
    return _getLooperLength();
  }

  late final _getLooperLengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('getLooperLength');
  late final _getLooperLength = _getLooperLengthPtr
      .asFunction<int Function()>();

  int getLooperPosition() {
    return _getLooperPosition();
  }

  late final _getLooperPositionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('getLooperPosition');
  late final _getLooperPosition = _getLooperPositionPtr
      .asFunction<int Function()>();

  void setLooperPosition(int position) {
    return _setLooperPosition(position);
  }

  late final _setLooperPositionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'setLooperPosition',
      );
  late final _setLooperPosition = _setLooperPositionPtr
      .asFunction<void Function(int)>();

  void setLooperTrackVolume(int trackIndex, double volume) {
    return _setLooperTrackVolume(trackIndex, volume);
  }

  late final _setLooperTrackVolumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'setLooperTrackVolume',
      );
  late final _setLooperTrackVolume = _setLooperTrackVolumePtr
      .asFunction<void Function(int, double)>();

  void setLooperTrackMuted(int trackIndex, bool muted) {
    return _setLooperTrackMuted(trackIndex, muted);
  }

  late final _setLooperTrackMutedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Bool)>>(
        'setLooperTrackMuted',
      );
  late final _setLooperTrackMuted = _setLooperTrackMutedPtr
      .asFunction<void Function(int, bool)>();

  void setLooperTrackSoloed(int trackIndex, bool soloed) {
    return _setLooperTrackSoloed(trackIndex, soloed);
  }

  late final _setLooperTrackSoloedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Bool)>>(
        'setLooperTrackSoloed',
      );
  late final _setLooperTrackSoloed = _setLooperTrackSoloedPtr
      .asFunction<void Function(int, bool)>();

  void removeLooperTrack(int trackIndex) {
    return _removeLooperTrack(trackIndex);
  }

  late final _removeLooperTrackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'removeLooperTrack',
      );
  late final _removeLooperTrack = _removeLooperTrackPtr
      .asFunction<void Function(int)>();

  void setLooperBPM(int bpm) {
    return _setLooperBPM(bpm);
  }

  late final _setLooperBPMPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('setLooperBPM');
  late final _setLooperBPM = _setLooperBPMPtr.asFunction<void Function(int)>();

  void setLooperSyncEnabled(bool enabled) {
    return _setLooperSyncEnabled(enabled);
  }

  late final _setLooperSyncEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperSyncEnabled',
      );
  late final _setLooperSyncEnabled = _setLooperSyncEnabledPtr
      .asFunction<void Function(bool)>();

  /// Afinador
  void startTuner() {
    return _startTuner();
  }

  late final _startTunerPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'startTuner',
  );
  late final _startTuner = _startTunerPtr.asFunction<void Function()>();

  void stopTuner() {
    return _stopTuner();
  }

  late final _stopTunerPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'stopTuner',
  );
  late final _stopTuner = _stopTunerPtr.asFunction<void Function()>();

  bool isTunerActive() {
    return _isTunerActive();
  }

  late final _isTunerActivePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('isTunerActive');
  late final _isTunerActive = _isTunerActivePtr.asFunction<bool Function()>();

  double getDetectedFrequency() {
    return _getDetectedFrequency();
  }

  late final _getDetectedFrequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getDetectedFrequency');
  late final _getDetectedFrequency = _getDetectedFrequencyPtr
      .asFunction<double Function()>();

  void processTunerBuffer(ffi.Pointer<ffi.Float> input, int numSamples) {
    return _processTunerBuffer(input, numSamples);
  }

  late final _processTunerBufferPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Int)>
      >('processTunerBuffer');
  late final _processTunerBuffer = _processTunerBufferPtr
      .asFunction<void Function(ffi.Pointer<ffi.Float>, int)>();

  /// Ativação/desativação de efeitos
  void setGainEnabled(bool enabled) {
    return _setGainEnabled(enabled);
  }

  late final _setGainEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setGainEnabled',
      );
  late final _setGainEnabled = _setGainEnabledPtr
      .asFunction<void Function(bool)>();

  void setDistortionEnabled(bool enabled) {
    return _setDistortionEnabled(enabled);
  }

  late final _setDistortionEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setDistortionEnabled',
      );
  late final _setDistortionEnabled = _setDistortionEnabledPtr
      .asFunction<void Function(bool)>();
